Bug 463939. When an SVG element's geometry changes and it has an ancestor with a filter  effect, invalidate the nearest SVG viewport ancestor because we don't have a good way to compute precise invalidation bounds. r=roc

--HG--
extra : rebase_source : 4f0b385d07b989137f83b80d6cd0907ee1dcd599