layout/svg/base/src/nsSVGContainerFrame.h
@@ -83,6 +83,8 @@ protected:
     nsSVGContainerFrame(aContext) {}
 
 public:
+  NS_DECLARE_FRAME_ACCESSOR(nsSVGDisplayContainerFrame);
+
   NS_DECL_QUERYFRAME
 
   // nsIFrame:
